feat: add documentation and links in composer output

--- a/generators/gh-nodejs-build/templates/deploy.yaml
+++ b/generators/gh-nodejs-build/templates/deploy.yaml
@@ -157,6 +157,7 @@ jobs:
       contents: read
     runs-on: ubuntu-latest
     steps:
+      # See: https://github.com/bcgov-nr/polaris-pipelines
       - name: Submit a job to Jenkins
         run: |
           curl \
