--- a/generators/pd-java-playbook/templates/playbook.yaml
+++ b/generators/pd-java-playbook/templates/playbook.yaml
@@ -48,12 +48,16 @@
 <% } -%>
 
   tasks:
-    - stat:
+    - ansible.builtin.stat:
         path: custom-tasks.yaml
       register: playbookcustomtask
       delegate_to: localhost
-    - debug:
-        msg: "{{ playbookcustomtask }}"
+    - ansible.builtin.debug:
+        msg: >
+          Warning! Review custom-tasks.yaml carefully. Please thoroughly check for potential issues
+          such as incorrect paths, overwritten files, or unintentional destructive commands. Failing
+          to validate the script may result in deployment failures, data loss, or service downtime.
+      when: playbookcustomtask.stat.exists
     - ansible.builtin.include_tasks: custom-tasks.yaml
       when: playbookcustomtask.stat.exists
     # The following is an example of a custom-tasks.yaml for adding custom webapp configuration files
