--- a/generators/pd-jasper-reports/templates/jasper-reports-playbook.yaml
+++ b/generators/pd-jasper-reports/templates/jasper-reports-playbook.yaml
@@ -17,9 +17,10 @@
     # If you have additional datasource templates, you can add them to the jasper_datasource_folders list below.
     jasper_datasource_folders:
       - <%= jasperServerInstanceUpperCase %>_<%= projectNameUpperCase %>
-    # Use the jasper_pause_seconds variable to increase the number of seconds to wait before requesting the import
-    # status (for large numbers of reports where the import can take longer to complete).
-    # jasper_pause_seconds: 20
+<% if (jasperPauseSeconds) { -%>
+    # Increase the number of seconds to wait before requesting the import status
+    jasper_pause_seconds: 20
+<% } -%>
 
   tasks:
     - name: Create package
