feat: increase default pause seconds

--- a/generators/pd-jasper-reports/templates/jasper-reports-playbook.yaml
+++ b/generators/pd-jasper-reports/templates/jasper-reports-playbook.yaml
@@ -19,7 +19,7 @@
       - <%= jasperServerInstanceUpperCase %>_<%= projectNameUpperCase %>
 <% if (jasperPauseSeconds) { -%>
     # Increase the number of seconds to wait before requesting the import status
-    jasper_pause_seconds: 20
+    jasper_pause_seconds: <%= jasperPauseSeconds -%>
 <% } -%>
 
   tasks:
