--- a/generators/gh-nodejs-build/templates/build-release.yaml
+++ b/generators/gh-nodejs-build/templates/build-release.yaml
@@ -53,7 +53,7 @@ jobs:
         with:
             fetch-depth: 0
             fetch-tags: true
-            ref: ${{ github.ref }}
+            ref: ${{ github.head_ref || github.ref }}
       - name: Setup ORAS
         uses: oras-project/setup-oras@v1
       - name: Set up Node
