feat: document jasper custom pause seconds (#117)
* feat: document jasper custom pause seconds

* feat: prompt for jasper pause seconds

* feat: increase default pause seconds

* feat: transform jasper pause seconds

--- a/generators/pd-jasper-reports/templates/jasper-reports-playbook.yaml
+++ b/generators/pd-jasper-reports/templates/jasper-reports-playbook.yaml
@@ -17,6 +17,10 @@
     # If you have additional datasource templates, you can add them to the jasper_datasource_folders list below.
     jasper_datasource_folders:
       - <%= jasperServerInstanceUpperCase %>_<%= projectNameUpperCase %>
+<% if (jasperPauseSeconds) { -%>
+    # Increase the number of seconds to wait before requesting the import status
+    jasper_pause_seconds: <%= jasperPauseSeconds -%>
+<% } -%>
 
   tasks:
     - name: Create package
