--- a/generators/gh-nodejs-build/templates/deploy.yaml
+++ b/generators/gh-nodejs-build/templates/deploy.yaml
@@ -1,8 +1,11 @@
-name: Deploy
+name: Deploy to environment
 
 on:
-  workflow_dispatch:
+  workflow_call:
     inputs:
+      environment:
+        required: true
+        type: string
       config_branch:
         description: 'Use branch for testing configuration changes'
         required: false
@@ -20,17 +23,11 @@ env:
   PACKAGE_REPO: ghcr.io/${{ github.repository }}/package
 
 jobs:
-  check-token-expiration:
-    name: Check token expiration
-    uses: ./.github/workflows/check-token.yaml
-    permissions: {}
-    secrets:
-      token: ${{ secrets.<%= brokerJwt %> }}
   deploy-pre-release-build:
-    name: Trigger dev/test deployment
+    name: Trigger ${{ inputs.environment }} deployment
     if: ${{ ! startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
-    needs: check-token-expiration
+    environment: ${{ inputs.environment }}
     permissions:
       contents: read
       packages: read
@@ -42,11 +39,27 @@ jobs:
       artifact_sha256: ${{ steps.set-build-output.outputs.artifact_sha256 }}
       download_url: ${{ steps.set-download-url.outputs.download_url }}
     steps:
+      - name: Lookup PR Merge Ref
+        id: lookup-pr-merge-ref
+        run: |
+          if [[ ${{ github.ref_name != 'main' }} = true ]]; then
+            RESPONSE=$(curl -s "https://api.github.com/repos/bcgov/nodejs-sample/pulls?head=bcgov:${{ github.ref_name }}&state=open&base=main" \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Accept: application/vnd.github+json")
+            PR_NUMBER=$(echo "${RESPONSE}" | jq -r '.[0].number')
+            echo "build_sha=$(echo ${RESPONSE} | jq -r .[0].merge_commit_sha)" >> $GITHUB_OUTPUT
+            echo "checkout_ref=refs/pull/${PR_NUMBER}/merge" >> $GITHUB_OUTPUT
+            echo "package_tag=${PR_NUMBER}-merge" >> $GITHUB_OUTPUT
+          else
+            echo "build_sha=${{ github.sha }}" >> $GITHUB_OUTPUT
+            echo "checkout_ref=${{ github.ref }}" >> $GITHUB_OUTPUT
+            echo "package_tag=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+          fi
       - name: Set build output
         id: set-build-output
         run: |
           RESPONSE=$(curl -s -X 'POST' \
-            "${BROKER_URL}/v1/intention/search?where=%7B%22actions.action%22%3A%22package-build%22%2C%22actions.service.project%22%3A%22${SERVICE_PROJECT}%22%2C%22actions.service.name%22%3A%22${SERVICE_NAME}%22%2C%22actions.package.buildVersion%22%3A%22${GITHUB_SHA}%22%7D&offset=0&limit=1" \
+            "${BROKER_URL}/v1/intention/search?where=%7B%22actions.action%22%3A%22package-build%22%2C%22actions.service.project%22%3A%22${SERVICE_PROJECT}%22%2C%22actions.service.name%22%3A%22${SERVICE_NAME}%22%2C%22actions.package.buildVersion%22%3A%22${BUILD_SHA}%22%7D&offset=0&limit=1" \
             -H 'accept: application/json' \
             -H 'Authorization: Bearer '"${BROKER_JWT}"'' \
             -d '')
@@ -55,6 +68,20 @@ jobs:
             echo "Please check if your Broker Token is valid. Teams can generate a new one in Broker if needed."
             echo "Link: https://broker.io.nrs.gov.bc.ca/browse/brokerAccount"
             echo "Exiting..."
+            exit 1
+          fi
+          if [ "$(echo "$RESPONSE" | jq '.data | length')" -eq 0 ]; then
+            echo
+            echo "============================================================"
+            echo "Error: Broker API response data is empty."
+            echo "------------------------------------------------------------"
+            echo "Explanation: No build information was found for this tag."
+            echo "Why it matters: The deployment cannot proceed without build metadata."
+            echo "Check if the build completed and published to Broker."
+            echo "--- Broker API response below ---"
+            echo "$RESPONSE"
+            echo "============================================================"
+            echo
             exit 1
           fi
           echo "project_version=$(echo ${RESPONSE} | jq -r '.data[].actions[].package.version')" >> $GITHUB_OUTPUT
@@ -68,28 +95,27 @@ jobs:
           BROKER_JWT: ${{ secrets.<%= brokerJwt %> }}
           SERVICE_PROJECT: ${{ env.SERVICE_PROJECT }}
           SERVICE_NAME: ${{ env.SERVICE_NAME }}
-          GITHUB_SHA: ${{ github.sha }}
+          BUILD_SHA: ${{ steps.lookup-pr-merge-ref.outputs.build_sha }}
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
             fetch-depth: 0
             fetch-tags: true
-            ref: ${{ github.ref }}
+            ref: ${{ steps.lookup-pr-merge-ref.outputs.checkout_ref }}
       - name: Set nodejs package download URL
         id: set-download-url
         run: |
-          SAFE_PACKAGE_TAG=$(echo "$PACKAGE_TAG" | tr '/' '-')
-          DOWNLOAD_URL="${PACKAGE_REPO}:${SAFE_PACKAGE_TAG}"
+          DOWNLOAD_URL="${PACKAGE_REPO}:${PACKAGE_TAG}"
           echo "${DOWNLOAD_URL}"
           echo "download_url=$(echo ${DOWNLOAD_URL})" >> $GITHUB_OUTPUT
         env:
-          PACKAGE_TAG: ${{ github.ref_name }}
+          PACKAGE_TAG: ${{ steps.lookup-pr-merge-ref.outputs.package_tag}}
           PACKAGE_REPO: ${{ env.PACKAGE_REPO }}
   deploy-release-build:
     name: Trigger prod deployment
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
-    needs: check-token-expiration
+    environment: ${{ inputs.environment }}
     permissions:
       contents: read
       packages: read
@@ -116,6 +142,20 @@ jobs:
             echo "Please check if your Broker Token is valid. Teams can generate a new one in Broker if needed."
             echo "Link: https://broker.io.nrs.gov.bc.ca/browse/brokerAccount"
             echo "Exiting..."
+            exit 1
+          fi
+          if [ "$(echo "$RESPONSE" | jq '.data | length')" -eq 0 ]; then
+            echo
+            echo "============================================================"
+            echo "Error: Broker API response data is empty."
+            echo "------------------------------------------------------------"
+            echo "Explanation: No build information was found for this tag."
+            echo "Why it matters: The deployment cannot proceed without build metadata."
+            echo "Check if the build completed and published to Broker."
+            echo "--- Broker API response below ---"
+            echo "$RESPONSE"
+            echo "============================================================"
+            echo
             exit 1
           fi
           echo "project_tag=${TAG}" >> $GITHUB_OUTPUT
@@ -159,8 +199,61 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # See: https://github.com/bcgov-nr/polaris-pipelines
-      - name: Submit deployment job
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+            fetch-depth: 0
+            fetch-tags: true
+            ref: ${{ github.ref }}
+      - name: Get deployment approver
+        id: get-deployment-approver
         run: |
+          set -e
+          ENVIRONMENT="${{ inputs.environment }}"
+          REPO="${{ github.repository }}"
+          
+          # Get environment info from the repo's deployment environments endpoint
+          ENV_INFO=$(gh api repos/${REPO}/environments/${ENVIRONMENT})
+          REVIEWERS=$(echo "$ENV_INFO" | jq -r '.protection_rules[]? | select(.reviewers != null) | .reviewers[0] // false')
+          if [[ -z "$REVIEWERS" ]]; then
+            REVIEWERS_REQUIRED=false
+          else
+            REVIEWERS_REQUIRED=true
+          fi
+          
+          if [[ "$REVIEWERS_REQUIRED" == "true" ]]; then
+            # Reviewers are required, get the approver from approvals endpoint
+            RUN_ID="${{ github.run_id }}"
+            APPROVALS_JSON=$(gh api repos/${REPO}/actions/runs/${RUN_ID}/approvals)
+            APPROVER_ID=$(echo "$APPROVALS_JSON" | jq -r --arg ENVIRONMENT "$ENVIRONMENT" \
+              '.[] | select(.environments[]?.name == $ENVIRONMENT) | .user.id // empty')
+            if [[ -z "$APPROVER_ID" ]]; then
+              echo "No approver found for run ID: $RUN_ID"
+              exit 1
+            fi
+            echo "approver_id=${APPROVER_ID}@GitHub" >> $GITHUB_OUTPUT
+          else
+            # No reviewers required, use the GitHub actor's user id as the approver
+            ACTOR_ID=$(gh api users/${{ github.actor }} | jq -r '.id')
+            echo "approver_id=${ACTOR_ID}@GitHub" >> $GITHUB_OUTPUT
+          fi
+        env:
+          GH_TOKEN: ${{ github.token }}
+      - name: Submit deployment job
+        id: submit-job
+        run: |
+          # Record the timestamp in ISO 8601 format
+          GH_TASK_START=$(date -u +"%Y-%m-%dT%H:%M:%S.%3NZ")
+          echo "gh_task_start=$GH_TASK_START" >> $GITHUB_OUTPUT
+
+          # Require DEPLOYMENT_APPROVER in guid@GitHub format
+          if [[ -n "${{ steps.get-deployment-approver.outputs.approver_id }}" ]]; then
+            DEPLOYMENT_APPROVER="${{ steps.get-deployment-approver.outputs.approver_id }}"
+          else
+            echo "Error: No deployment approver found. Failing deployment."
+            exit 1
+          fi
+          
           curl \
           --data-urlencode "token=${{ secrets.JENKINS_TOKEN }}" \
           --data-urlencode "githubToken=${{ secrets.GITHUB_TOKEN }}" \
@@ -173,6 +266,8 @@ jobs:
           --data-urlencode "configBranch=${{ inputs.config_branch || '' }}" \
           --data-urlencode "downloadUrl=${DOWNLOAD_URL}" \
           --data-urlencode "downloadType=OCI" \
+          --data-urlencode "envShort=${{ inputs.environment }}" \
+          --data-urlencode "deploymentApprover=${DEPLOYMENT_APPROVER}" \
           -H "Connection: close" \
           ${{ env.URL }}/${{ env.JOB }}
         env:
@@ -185,6 +280,12 @@ jobs:
         run: |
           DEPLOYMENT_JOB_URL="${{ env.URL }}/job/${{ env.SERVICE_PROJECT }}/job/${{ env.SERVICE_NAME }}/"
           echo "Deployment job URL: ${DEPLOYMENT_JOB_URL}"
-      - name: Keep GH token alive
-        run: sleep 90s
-        shell: bash
+      - name: Wait for Jenkins deployment job to be triggered and completed
+        id: check-jenkins-job-status
+        run: ./.github/workflows/check-deploy-job-status.sh
+        env:
+          GH_TASK_START: ${{ steps.submit-job.outputs.gh_task_start }}
+          BROKER_URL: https://broker.io.nrs.gov.bc.ca
+          BROKER_JWT: ${{ secrets.<%= brokerJwt %> }}
+          SERVICE_PROJECT: ${{ env.SERVICE_PROJECT }}
+          SERVICE_NAME: ${{ env.SERVICE_NAME }}
