--- a/generators/gh-maven-build/templates/build-release.yaml
+++ b/generators/gh-maven-build/templates/build-release.yaml
@@ -53,7 +53,10 @@ jobs:
       - name: Lookup PR Merge Ref
         id: lookup-pr-merge-ref
         run: |
-          if [[ ${{ github.ref_name != 'main' }} = true ]]; then
+          if [[ "${{ github.ref_type }}" == "tag" ]]; then
+            echo "checkout_ref=${{ github.ref }}" >> $GITHUB_OUTPUT
+            echo "version_modifier=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+          elif [[ ${{ github.ref_name != 'main' }} = true ]]; then
             RESPONSE=$(curl -s "https://api.github.com/repos/<%= gitHubOwnerPack %>/pulls?head=<%= gitHubOwnerPack.split('/')[0] %>:${{ github.head_ref || github.ref_name }}&state=open&base=main" \
               -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
               -H "Accept: application/vnd.github+json")
