feat: update maven (#129)
* feat: copyCommonBuildWorkflows

* feat: copyCommonDeployWorkflows

* feat: remove common templates

* feat: deploy environment

* fix: syntax and update envLong

* chore: lint

--- a/generators/gh-common-template/check-token.yaml
+++ b/generators/gh-common-template/check-token.yaml
@@ -11,12 +11,12 @@ on:
       token:
         description: "The Broker token"
         required: true
+permissions: {}
 
 jobs:
   check-jwt:
     name: Check broker token
     runs-on: ubuntu-latest
-
     steps:
       - name: Check token expiration
         shell: bash
