--- a/generators/gh-maven-build/templates/deploy.yaml
+++ b/generators/gh-maven-build/templates/deploy.yaml
@@ -1,10 +1,12 @@
-name: Deploy
+name: Deploy to environment
 
 on:
-  workflow_dispatch:
+  workflow_call:
     inputs:
+      environment:
+        required: true
+        type: string
       config_branch:
-        description: 'Use branch for testing configuration changes'
         required: false
         type: string
 
@@ -31,9 +33,10 @@ jobs:
     secrets:
       token: ${{ secrets.<%= brokerJwt %> }}
   deploy-pre-release-build:
-    name: Trigger dev/test deployment
+    name: "Trigger ${{ inputs.environment }} deploy"
     if: ${{ ! startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
     needs: check-token-expiration
     permissions:
       contents: read
@@ -188,9 +191,10 @@ jobs:
           PROJECT_VERSION: ${{ steps.set-build-output.outputs.project_version }}
           PACKAGE_REPO: ${{ env.PACKAGE_REPO }}
   deploy-release-build:
-    name: Trigger prod deployment
+    name: Trigger production deployment
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
+    environment: ${{ inputs.environment }}
     needs: check-token-expiration
     permissions:
       contents: read
@@ -300,8 +304,60 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # See: https://github.com/bcgov-nr/polaris-pipelines
-      - name: Submit deployment job
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          fetch-tags: true
+          ref: ${{ github.ref }}
+      - name: Get deployment approver
+        id: get-deployment-approver
         run: |
+          set -e
+          ENVIRONMENT="${{ inputs.environment }}"
+          REPO="${{ github.repository }}"
+
+          # Get environment info from the repo's deployment environments endpoint
+          ENV_INFO=$(gh api repos/${REPO}/environments/${ENVIRONMENT})
+          REVIEWERS=$(echo "$ENV_INFO" | jq -r '.protection_rules[]? | select(.reviewers != null) | .reviewers[0] // false')
+          if [[ -z "$REVIEWERS" ]]; then
+            REVIEWERS_REQUIRED=false
+          else
+            REVIEWERS_REQUIRED=true
+          fi
+
+          if [[ "$REVIEWERS_REQUIRED" == "true" ]]; then
+            # Reviewers are required, get the approver from approvals endpoint
+            RUN_ID="${{ github.run_id }}"
+            APPROVALS_JSON=$(gh api repos/${REPO}/actions/runs/${RUN_ID}/approvals)
+            APPROVER_ID=$(echo "$APPROVALS_JSON" | jq -r --arg ENVIRONMENT "$ENVIRONMENT" \
+              '.[] | select(.environments[]?.name == $ENVIRONMENT) | .user.id // empty')
+            if [[ -z "$APPROVER_ID" ]]; then
+              echo "No approver found for run ID: $RUN_ID"
+              exit 1
+            fi
+            echo "approver_id=${APPROVER_ID}@GitHub" >> $GITHUB_OUTPUT
+          else
+            # No reviewers required, use the GitHub actor's user id as the approver
+            ACTOR_ID=$(gh api users/${{ github.actor }} | jq -r '.id')
+            echo "approver_id=${ACTOR_ID}@GitHub" >> $GITHUB_OUTPUT
+          fi
+        env:
+          GH_TOKEN: ${{ github.token }}
+      - name: Submit deployment job
+        id: submit-job
+        run: |
+          # Record the timestamp in ISO 8601 format
+          GH_TASK_START=$(date -u +"%Y-%m-%dT%H:%M:%S.%3NZ")
+          echo "gh_task_start=$GH_TASK_START" >> $GITHUB_OUTPUT
+
+          # Require DEPLOYMENT_APPROVER in guid@GitHub format
+          if [[ -n "${{ steps.get-deployment-approver.outputs.approver_id }}" ]]; then
+            DEPLOYMENT_APPROVER="${{ steps.get-deployment-approver.outputs.approver_id }}"
+          else
+            echo "Error: No deployment approver found. Failing deployment."
+            exit 1
+          fi
           curl \
           --data-urlencode "token=${{ secrets.JENKINS_TOKEN }}" \
           --data-urlencode "githubToken=${{ secrets.GITHUB_TOKEN }}" \
@@ -314,6 +370,8 @@ jobs:
           --data-urlencode "configBranch=${{ inputs.config_branch || '' }}" \
           --data-urlencode "downloadUrl=${DOWNLOAD_URL}" \
           --data-urlencode "downloadType=<% if (gitHubPackages) { -%>GITHUB<% } else { -%>ARTIFACTORY<% } -%>" \
+          --data-urlencode "envLong=${{ inputs.environment }}" \
+          --data-urlencode "deploymentApprover=${DEPLOYMENT_APPROVER}" \
           -H "Connection: close" \
           ${{ env.URL }}/${{ env.JOB }}
         env:
@@ -326,6 +384,13 @@ jobs:
         run: |
           DEPLOYMENT_JOB_URL="${{ env.URL }}/job/${{ env.SERVICE_PROJECT }}/job/${{ env.SERVICE_NAME }}/"
           echo "Deployment job URL: ${DEPLOYMENT_JOB_URL}"
-      - name: Keep GH token alive
-        run: sleep 90s
-        shell: bash
+
+      - name: Wait for Jenkins deployment job to be triggered and completed
+        id: check-jenkins-job-status
+        run: ./.github/workflows/check-deploy-job-status.sh
+        env:
+          GH_TASK_START: ${{ steps.submit-job.outputs.gh_task_start }}
+          BROKER_URL: https://broker.io.nrs.gov.bc.ca
+          BROKER_JWT: ${{ secrets.<%= brokerJwt %> }}
+          SERVICE_PROJECT: ${{ env.SERVICE_PROJECT }}
+          SERVICE_NAME: ${{ env.SERVICE_NAME }}
