fix: deploy pull-requests read

--- a/generators/gh-maven-build/templates/deploy.yaml
+++ b/generators/gh-maven-build/templates/deploy.yaml
@@ -34,6 +34,7 @@ jobs:
     permissions:
       contents: read
       packages: read
+      pull-requests: read
     outputs:
       project_version: ${{ steps.set-build-output.outputs.project_version }}
       build_guid: ${{ steps.set-build-output.outputs.build_guid }}
