--- a/generators/gh-maven-build/templates/build-release.yaml
+++ b/generators/gh-maven-build/templates/build-release.yaml
@@ -1,4 +1,4 @@
-name: Build and release
+name: Build and release - <%= serviceName %>
 
 on:
   push:
@@ -93,6 +93,7 @@ jobs:
       - name: Update pom.xml
         id: update-repo
         shell: bash
+        working-directory: ./<%= relativePath %>
         run: |
           if [[ ${{ startsWith(github.ref, 'refs/tags/v') }} = true ]]; then
             TAG=${{ github.ref_name }}
@@ -105,6 +106,7 @@ jobs:
           mvn versions:set -DnewVersion=${VERSION} --file <%= pomRoot %>pom.xml
       - name: Set build output parameters
         id: set-build-output-parameters
+        working-directory: ./<%= relativePath %>
         run: |
           echo "project_version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout --file <%= pomRoot %>pom.xml)" >> $GITHUB_OUTPUT
           echo "artifact_id=$(mvn help:evaluate -Dexpression=project.artifactId -q -DforceStdout --file <%= pomRoot %>pom.xml)" >> $GITHUB_OUTPUT
@@ -112,7 +114,7 @@ jobs:
           echo "git_commit=$(git rev-parse --verify HEAD)" >> $GITHUB_OUTPUT
           echo "build_guid=uuid::$(uuidgen)" >> $GITHUB_OUTPUT
       - name: Build intention
-        run: sh ./.github/workflows/build-intention.sh
+        run: sh ./.github/workflows/build-intention<% if (relativePath) { -%>-<%= serviceName %><% } -%>.sh
         env:
           EVENT_REASON: Build ${{ github.ref_name }}
           GITHUB_REPOSITORY: ${{ github.repository}}
@@ -136,6 +138,7 @@ jobs:
           INTENTION_ID: ${{ env.INTENTION_ID }}
       - name: Publish artifact
         id: publish-artifact
+        working-directory: ./<%= relativePath %>
 <% if (gitHubPackages) { -%>
         run: |
           ARTIFACT_NAME="${ARTIFACT_ID}-${PROJECT_VERSION}.${PACKAGE_TYPE}"
