--- a/generators/gh-nodejs-build/templates/deploy.yaml
+++ b/generators/gh-nodejs-build/templates/deploy.yaml
@@ -289,4 +289,6 @@ jobs:
           BROKER_URL: https://broker.io.nrs.gov.bc.ca
           BROKER_JWT: ${{ secrets.<%= brokerJwt %> }}
           SERVICE_PROJECT: ${{ env.SERVICE_PROJECT }}
-          SERVICE_NAME: ${{ env.SERVICE_NAME }}
+          SERVICE_NAME: ${{ env.SERVICE_NAME }}          
+          ACTION_NAME: "package-installation"
+          PROVIDER_NAME: "polaris-deploy"
