--- a/generators/pd-jasper-reports/templates/run-jasper-reports-workflow.yaml
+++ b/generators/pd-jasper-reports/templates/run-jasper-reports-workflow.yaml
@@ -11,6 +11,9 @@ on:
           - development
           - test
           - production
+concurrency:
+  group: run-jasper-${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 permissions:
   contents: read
