feat: additional jasper data sources

--- a/generators/pd-jasper-reports/templates/jasper-reports-datasource.yaml
+++ b/generators/pd-jasper-reports/templates/jasper-reports-datasource.yaml
@@ -10,3 +10,11 @@
         src: "<%= jasperServerInstanceUpperCase %>_<%= projectNameUpperCase %>.xml.j2",
         dest: "{{ jasper_staging_dir }}/jcrs-reports/resources/<%= jasperServerInstanceUpperCase %>/Data_Sources/<%= jasperServerInstanceUpperCase %>_<%= projectNameUpperCase %>.xml"
       }
+<% if (jasperAdditionalDataSources) { -%>
+  <%_ for (dataSource of jasperAdditionalDataSources.split(',')) { -%>
+    - {
+        src: "<%= jasperServerInstanceUpperCase %>_<%= projectNameUpperCase %>_<%= dataSource.trim() %>.xml.j2",
+        dest: "{{ jasper_staging_dir }}/jcrs-reports/resources/<%= jasperServerInstanceUpperCase %>/Data_Sources/<%= jasperServerInstanceUpperCase %>_<%= projectNameUpperCase %>_<%= dataSource.trim() %>.xml"
+      }
+  <%_ } -%>
+<% } -%>
