--- a/generators/pd-jasper-reports/templates/jasper-reports-playbook.yaml
+++ b/generators/pd-jasper-reports/templates/jasper-reports-playbook.yaml
@@ -11,12 +11,24 @@
     jasper_ds_0_url: "{{ lookup('ansible.builtin.env', 'PODMAN_cfg_jasper_ds_0_url') | default('') }}"
     jasper_ds_0_user: "{{ lookup('ansible.builtin.env', 'PODMAN_cfg_jasper_ds_0_user') | default('') }}"
     jasper_ds_0_password: "{{ lookup('ansible.builtin.env', 'PODMAN_cfg_jasper_ds_0_password') | default('') }}"
+<% if (jasperAdditionalDataSources) { -%>
+  <%_ for (dsIndex of jasperAdditionalDataSources.split(',').keys()) { -%>
+    jasper_ds_<%= dsIndex+1 %>_url: "{{ lookup('ansible.builtin.env', 'PODMAN_cfg_jasper_ds_<%= dsIndex+1 %>_url') | default('') }}"
+    jasper_ds_<%= dsIndex+1 %>_user: "{{ lookup('ansible.builtin.env', 'PODMAN_cfg_jasper_ds_<%= dsIndex+1 %>_user') | default('') }}"
+    jasper_ds_<%= dsIndex+1 %>_password: "{{ lookup('ansible.builtin.env', 'PODMAN_cfg_jasper_ds_<%= dsIndex+1 %>_password') | default('') }}"
+  <%_ } -%>
+<% } -%>
     jasper_deployer_url: "{{ lookup('ansible.builtin.env', 'PODMAN_cfg_jasper_deployer_url') | default('') }}"
     jasper_deployer_user: "{{ lookup('ansible.builtin.env', 'PODMAN_cfg_jasper_deployer_user') | default('') }}"
     jasper_deployer_password: "{{ lookup('ansible.builtin.env', 'PODMAN_cfg_jasper_deployer_password') | default('') }}"
     # If you have additional datasource templates, you can add them to the jasper_datasource_folders list below.
     jasper_datasource_folders:
       - <%= jasperServerInstanceUpperCase %>_<%= projectNameUpperCase %>
+<% if (jasperAdditionalDataSources) { -%>
+  <%_ for (dataSource of jasperAdditionalDataSources.split(',')) { -%>
+      - <%= jasperServerInstanceUpperCase %>_<%= projectNameUpperCase %>_<%= dataSource.trim() %>
+  <%_ } -%>
+<% } -%>
     jasper_source_path: "<%= jasperSourcePath %>"
 <% if (jasperPauseSeconds) { -%>
     # Increase the number of seconds to wait before requesting the import status
