--- a/generators/pd-jasper-reports/templates/jasper-reports-workflow.yaml
+++ b/generators/pd-jasper-reports/templates/jasper-reports-workflow.yaml
@@ -88,6 +88,7 @@ jobs:
           --data-urlencode "gitTag=${{ (startsWith(github.ref, 'refs/tags/') && github.ref_name) || '' }}" \
           --data-urlencode "envLong=${{ inputs.environment }}" \
           --data-urlencode "deploymentApprover=${DEPLOYMENT_APPROVER}" \
+          --data-urlencode "triggerUrl=https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}" \
           --data-urlencode "brokerJwt=${{ secrets.<%= brokerJwt %> }}" \
           -H "Connection: close" \
           ${{ env.URL }}/${{ env.JOB }}
