--- a/generators/gh-maven-build/templates/build-release.yaml
+++ b/generators/gh-maven-build/templates/build-release.yaml
@@ -1,4 +1,4 @@
-name: Build and release - <%= serviceName %>
+name: Build and publish - <%= serviceName %>
 
 on:
   push:
@@ -22,9 +22,9 @@ env:
   SERVICE_NAME: <%= serviceName %>
 
 jobs:
-  check-token-expiration:
-    name: Check token expiration
-    uses: ./.github/workflows/check-token.yaml
+  preflight:
+    name: Preflight
+    uses: ./.github/reusable/preflight.yaml
     permissions: {}
     secrets:
       token: ${{ secrets.<%= brokerJwt %> }}
@@ -34,13 +34,13 @@ jobs:
     if: ${{ ! startsWith(github.ref, 'refs/tags/v') }}
     uses: <%= unitTestsPath %>
 <% } -%>
-  build-release:
-    name: Build and release
+  build-publish:
+    name: Build and publish
     runs-on: ubuntu-latest
 <% if (unitTestsPath) { -%>
-    needs: [check-token-expiration, test]
+    needs: [preflight, test]
 <% } else { -%>
-    needs: check-token-expiration
+    needs: preflight
 <% } -%>
     permissions:
       contents: read
