--- a/generators/gh-nodejs-build/templates/build-release.yaml
+++ b/generators/gh-nodejs-build/templates/build-release.yaml
@@ -1,4 +1,4 @@
-name: Build and release - <%= serviceName %>
+name: Build and publish - <%= serviceName %>
 
 on:
   push:
@@ -20,9 +20,9 @@ env:
   SERVICE_NAME: <%= serviceName %>
 
 jobs:
-  check-token-expiration:
-    name: Check token expiration
-    uses: ./.github/workflows/check-token.yaml
+  preflight:
+    name: Preflight
+    uses: ./.github/reusable/preflight.yaml
     permissions: {}
     secrets:
       token: ${{ secrets.<%= brokerJwt %> }}
@@ -32,13 +32,13 @@ jobs:
     if: ${{ ! startsWith(github.ref, 'refs/tags/v') }}
     uses: <%= unitTestsPath %>
 <% } -%>
-  build-release:
-    name: Build and release
+  build-publish
+    name: Build and publish
     runs-on: ubuntu-latest
 <% if (unitTestsPath) { -%>
-    needs: [check-token-expiration, test]
+    needs: [preflight, test]
 <% } else { -%>
-    needs: check-token-expiration
+    needs: preflight
 <% } -%>
     permissions:
       contents: read
@@ -117,7 +117,7 @@ jobs:
       - name: Build artifact
         run: npm run build --if-present
         working-directory: ./<%= relativePath %>
-      - name: Push build
+      - name: Publish artifact
         id: publish-artifact
         run: |
           oras login ghcr.io -u ${{ github.actor }} --password-stdin <<< ${{ secrets.GITHUB_TOKEN }}
